--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "json-server --watch db.json --port 5005"
+    "server": "json-server --watch db.json --port 5005",
+    "start": "json-server db.json --port $PORT"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
+    "json-server": "^1.0.0-beta.3",
     "lottie-react": "^2.4.0",
     "motion": "^11.12.0",
     "react": "^18.2.0",
@@ -40,7 +42,6 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "json-server": "^1.0.0-beta.3",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
